--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,16 @@ dependencies {
     implementation "com.android.support:support-dynamic-animation:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //Firebase libs
+    //implementation 'com.google.firebase:firebase-admin:6.4.0'
     implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
-    implementation 'com.google.firebase:firebase-appindexing:16.0.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.2'
+    implementation 'com.google.firebase:firebase-appindexing:16.0.2'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
     implementation 'com.firebaseui:firebase-ui-database:1.0.1'
-    implementation 'com.google.firebase:firebase-storage:16.0.2'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-messaging:17.3.2'
-    implementation 'com.google.android.gms:play-services-ads:16.0.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
 
 
 
@@ -48,7 +49,7 @@ dependencies {
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.github.StevenDXC:DxLoadingButton:2.0'
+    //implementation 'com.github.StevenDXC:DxLoadingButton:2.0'
     //implementation 'com.github.abdularis:androidbuttonprogress:v0.1-alpha5'
     implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -62,7 +63,10 @@ dependencies {
     //implementation 'org.michaelbel:bottomsheet:1.2.3'
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
     //implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.2.0'
-    implementation 'com.asksira.android:bsimagepicker:1.0.1'
+    //implementation 'com.asksira.android:bsimagepicker:1.0.1'
+    implementation 'com.github.silvestrpredko:dot-progress-bar:1.1'
+    //implementation 'com.github.hajiyevelnur92:Copy-button:1.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
