--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,12 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        renderscriptTargetApi 19
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    dataBinding {
+        enabled = true
     }
     buildTypes {
         release {
@@ -42,9 +47,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.android.gms:play-services-ads:17.0.0'
+    implementation 'com.github.wooplr:Spotlight:1.2.3'
 
-
-
+    implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
+//    implementation 'agency.tango.android:material-intro-screen:{latest_release}'
+    implementation 'com.github.dimorinny:show-case-card-view:0.0.4'
 
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -71,6 +78,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+repositories {
+    mavenCentral()
 }
 apply plugin: 'com.google.gms.google-services'
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
