--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.5"
         renderscriptTargetApi 19
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.android.gms:play-services-ads:17.0.0'
     implementation 'com.github.wooplr:Spotlight:1.2.3'
-
+    implementation 'com.huxq17.android:SwipeCardsView:1.3.4'
     implementation 'com.github.clans:fab:1.6.2'
     implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
 //    implementation 'agency.tango.android:material-intro-screen:{latest_release}'
