--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.android.gms:play-services-ads:17.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+
+
+
     implementation 'com.github.wooplr:Spotlight:1.2.3'
     implementation 'com.huxq17.android:SwipeCardsView:1.3.4'
     implementation 'com.github.clans:fab:1.6.2'
