--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,22 @@ import com.google.gms.googleservices.GoogleServicesPlugin
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'mtvky'
+            keyPassword 'inlustris1810'
+            storeFile file('C:/Users/cacai/Documents/programas/motiv/motiv_keystr.jks')
+            storePassword 'inlustris1810'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         renderscriptSupportModeEnabled true
         applicationId "com.creat.motiv"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "3.0"
+        versionCode 6
+        versionName "5.1"
         renderscriptTargetApi 19
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,12 +30,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -36,10 +47,12 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:animated-vector-drawable:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation "com.android.support:support-dynamic-animation:27.1.1"
+    implementation 'com.android.support:support-dynamic-animation:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:palette-v7:27.1.1'
+
     //Firebase libs
+
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.google.firebase:firebase-appindexing:17.1.0'
@@ -50,41 +63,54 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
-
     implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
 
-
-
     //implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'com.github.wooplr:Spotlight:1.2.3'
+    //implementation 'com.github.wooplr:Spotlight:1.2.3'
+
     //implementation 'com.huxq17.android:SwipeCardsView:1.3.4'
     implementation 'com.github.clans:fab:1.6.2'
-    //implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
-//    implementation 'agency.tango.android:material-intro-screen:{latest_release}'
-    //implementation 'com.github.dimorinny:show-case-card-view:0.0.4'
 
+    //implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
+
+    //    implementation 'agency.tango.android:material-intro-screen:{latest_release}'
+
+    //implementation 'com.github.dimorinny:show-case-card-view:0.0.4'
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
     //implementation 'com.github.StevenDXC:DxLoadingButton:2.0'
+
     //implementation 'com.github.abdularis:androidbuttonprogress:v0.1-alpha5'
+
     //implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     //implementation 'com.github.takusemba:cropme:1.0.0'
+
     //implementation 'com.github.jrvansuita:GaussianBlur:1.0.0'
+
     //implementation 'com.jakewharton:butterknife:7.0.1'
+
     //implementation 'com.github.tarek360:BottomNavigation-RichPath-Sample:09249c56bd'
+
     //implementation 'com.github.marcoscgdev:DialogSheet:1.0.6'
+
     //implementation 'com.github.Binary-Finery:FabToast:1.0'
     implementation 'com.github.matecode:Snacky:1.0.3'
+
     //implementation 'org.michaelbel:bottomsheet:1.2.3'
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
+
     //implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.2.0'
+    implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
+
     //implementation 'com.asksira.android:bsimagepicker:1.0.1'
     implementation 'com.github.silvestrpredko:dot-progress-bar:1.1'
+   // implementation 'com.github.AhmMhd:SeeMoreTextView-Android:1.0.0'
+
     //implementation 'com.github.hajiyevelnur92:Copy-button:1.0'
-
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
