--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.android.support:support-dynamic-animation:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:palette-v7:27.1.1'
+    implementation 'com.google.android:flexbox:1.0.0'
 
     //Firebase libs
 
