--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,18 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ErrorActivity"
+            android:clearTaskOnLaunch="true"
+            android:process=":report_process" />
         <activity
             android:name=".SettingsActivity"
             android:windowSoftInputMode="adjustResize" />
@@ -59,9 +63,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme"
             android:name=".Splash"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,11 +73,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:windowSoftInputMode="adjustResize"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".NewUser" />
 
         <service android:name=".Utils.Notifications">
@@ -88,7 +92,6 @@
         </service>
 
         <receiver android:name=".Utils.Notification_reciever" />
-
     </application>
 
 </manifest>
