--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-
+    implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.github.matecode:Snacky:1.1.4'
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
     implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
