--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     signingConfigs {
@@ -12,11 +14,13 @@ android {
         applicationId "com.creat.motiv"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 13
-        versionName "8.5"
+        versionCode 14
+        versionName "9.0"
         renderscriptTargetApi 19
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
     dataBinding {
         enabled = true
@@ -37,6 +41,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
 
     //Firebase libs
 
@@ -63,7 +68,7 @@ dependencies {
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
     implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
     implementation 'com.github.silvestrpredko:dot-progress-bar:1.1'
-
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -72,4 +77,4 @@ dependencies {
 repositories {
     mavenCentral()
 }
-apply plugin: 'com.google.gms.google-services'
+ apply plugin: 'com.google.gms.google-services'
