--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.creat.motiv">
 
     <application
-        android:name=".App"
+        android:name=".View.activities.App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserActivity" />
+        <activity android:name=".View.activities.UserActivity" />
 
         <activity
-            android:name=".ErrorActivity"
+            android:name=".View.activities.ErrorActivity"
             android:clearTaskOnLaunch="true"
             android:process=":report_process" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".View.activities.SettingsActivity"
             android:windowSoftInputMode="adjustResize" />
 
         <activity
@@ -39,7 +39,7 @@
         </activity>
 
         <activity
-            android:name=".Splash"
+            android:name=".View.activities.Splash"
             android:exported="true"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -49,13 +49,13 @@
             </intent-filter>
         </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <activity
-            android:name=".MainActivity"
+            android:name=".View.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".NewUser" />
+        <activity android:name=".View.activities.NewUser" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_notification" />
