--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.android.databinding'
 
 android {
     signingConfigs {
@@ -43,7 +44,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
-
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     //Firebase libs
 
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
