--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation 'nl.joery.animatedbottombar:library:1.0.0'
     implementation 'com.andrognito.flashbar:flashbar:1.0.3'
