--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
-        android:name=".view.activities.App"
+        android:name=".View.activities.App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,14 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.UserActivity" />
+        <activity android:name=".View.activities.UserActivity" />
 
         <activity
-            android:name=".view.activities.ErrorActivity"
+            android:name=".View.activities.ErrorActivity"
             android:clearTaskOnLaunch="true"
             android:process=":report_process" />
         <activity
-            android:name=".view.activities.SettingsActivity"
+            android:name=".View.activities.SettingsActivity"
             android:windowSoftInputMode="adjustResize" />
 
         <activity
@@ -42,7 +42,7 @@
         </activity>
 
         <activity
-            android:name=".view.activities.Splash"
+            android:name=".View.activities.Splash"
             android:exported="true"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -51,14 +51,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
-        <activity
-            android:name=".view.activities.MainActivity"
+
+        <activity android:name=".View.activities.NewUser" />
+
+        <activity android:name=".View.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize" />
-
-        <activity android:name=".View.activities.NewUser" />
+            android:windowSoftInputMode="adjustResize"  />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
