--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,12 +53,8 @@
         </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
 
         <activity android:name=".View.activities.NewUser" />
+        <activity android:name=".View.activities.MainActivity" />
 
-        <activity android:name=".View.activities.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize"  />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
