--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -63,6 +62,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
@@ -72,13 +72,14 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.mikhaellopez:rxanimation:1.0.0'
+    implementation 'com.mikhaellopez:gradientview:1.1.0'
 
     implementation 'nl.joery.animatedbottombar:library:1.0.0'
     implementation 'com.andrognito.flashbar:flashbar:1.0.3'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
 
     kapt 'com.android.databinding:compiler:3.1.4'
-
 
 
     testImplementation 'junit:junit:4.12'
@@ -88,4 +89,4 @@ dependencies {
 repositories {
     mavenCentral()
 }
- apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
