--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.creat.motiv">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".view.activities.App"
         android:allowBackup="true"
@@ -14,8 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activities.EditQuoteActivity"></activity>
         <activity android:name=".view.activities.UserActivity" />
-
         <activity
             android:name=".view.activities.ErrorActivity"
             android:clearTaskOnLaunch="true"
@@ -23,7 +25,6 @@
         <activity
             android:name=".view.activities.SettingsActivity"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -40,7 +41,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.activities.Splash"
             android:exported="true"
@@ -57,7 +57,6 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
-
         <activity android:name=".View.activities.NewUser" />
 
         <meta-data
@@ -69,6 +68,7 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-4979584089010597~4181793255" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.creativ.fileprovider"
@@ -96,6 +96,5 @@
             </intent-filter>
         </service>
     </application>
-
 
 </manifest>
