--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".View.activities.NewUser" />
+        <activity android:name=".view.activities.NewUser" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
