--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activities.EditQuoteActivity"></activity>
-        <activity android:name=".view.activities.UserActivity" />
+        <activity
+            android:name=".view.activities.EditQuoteActivity"
+            android:theme="@style/AppThemeUser"
+            android:label="Editar post" />
+        <activity android:name=".view.activities.UserActivity" android:theme="@style/AppThemeUser" />
         <activity
             android:name=".view.activities.ErrorActivity"
             android:clearTaskOnLaunch="true"
