--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.creat.motiv"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 16
-        versionName "9.4"
+        versionCode 17
+        versionName "9.5"
         renderscriptTargetApi 19
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -49,36 +49,33 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    //implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'com.google.android.play:core:1.6.5'
+    implementation 'com.google.android.play:core:1.7.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
     //Firebase libs
 
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-appindexing:19.1.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.firebaseui:firebase-ui-database:1.0.1'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-core:17.2.3'
-    implementation 'com.google.firebase:firebase-messaging:20.1.2'
-    implementation 'com.google.android.gms:play-services-ads:19.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.3'
+    implementation 'com.google.android.gms:play-services-ads:19.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:5.1.1'
     implementation 'com.hmomeni.progresscircula:progresscircula:0.2.1'
     implementation "com.github.skydoves:balloon:1.1.0"
-    implementation 'com.github.Spikeysanju:MotionToast:1.0'
-    implementation 'nl.bryanderidder:themed-toggle-button-group:1.1.0'
-
+    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.pes.materialcolorpicker:library:1.2.4'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
@@ -91,10 +88,7 @@ dependencies {
     implementation 'com.mikhaellopez:rxanimation:1.0.0'
     implementation 'com.mikhaellopez:gradientview:1.1.0'
     implementation 'com.google.android:flexbox:2.0.1'
-    implementation 'com.github.Spikeysanju:MotionToast:1.1'
-
     implementation 'nl.joery.animatedbottombar:library:1.0.0'
-    implementation 'com.andrognito.flashbar:flashbar:1.0.3'
     implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
 
     kapt 'com.android.databinding:compiler:3.1.4'
