--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,8 +74,14 @@ dependencies {
 
     //implementation 'com.google.firebase:firebase-admin:6.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
-    implementation 'com.google.firebase:firebase-database-ktx:19.5.1'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+
+    // Declare the dependency for the Cloud Storage library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-appindexing:19.1.0'
     implementation 'com.google.firebase:firebase-auth:20.0.0'
@@ -92,13 +98,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.budiyev.android:circular-progress-bar:1.2.2'
     implementation 'com.github.mmin18:realtimeblurview:1.1.2'
     implementation 'com.github.devendroid:ReadMoreOption:1.0.2'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
+    implementation 'com.opensooq.supernova:gligar:1.1.0'
+    implementation 'com.github.veeyaarVR:SuperGradientTextView:1.1'
+
     kapt 'com.android.databinding:compiler:3.1.4'
 
 
